[package]
name = "subclean"
version = "0.1.0"
authors = ["Karel Peeters <karel.peeters.leuven@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
subparse = "0.6.2"
clap = { git = "https://github.com/clap-rs/clap/" } # = "3.0.0"
nom = "5.1.1"
regex = "1.3.6"
retain_mut = "0.1.1"
itertools = "0.9.0"
failure = "0.1.7"
exitfailure = "0.5.1"
