[package]
name = "subclean"
version = "0.2.0"
authors = ["Karel Peeters <karel.peeters.leuven@gmail.com>"]
edition = "2018"

[dependencies]
subparse = "0.7.0"
nom = "7.1.0"
regex = "1.5.4"
retain_mut = "0.1.6"
itertools = "0.10.3"
failure = { version = "0.1.8", default-features=false, features=["std"] }
glob = "0.3.0"
